--- a/lien-he.html
+++ b/lien-he.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phone" class="block text-sm font-medium text-gray-700 mb-1">Số điện thoại*</label>
-                            <input type="tel" id="phone" name="phone" placeholder="09xxxxxxxx" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150" required pattern="[0-9]{10,11}" title="Số điện thoại hợp lệ (10-11 chữ số)">
+                            <input type="tel" id="phone" name="phone" placeholder="Số điện thoại" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm transition duration-150" required pattern="[0-9]{10,11}" title="Số điện thoại hợp lệ (10-11 chữ số)">
                         </div>
                     </div>
 
