--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
                     <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
                          <div class="placeholder-img">
-                            [Ảnh đại diện tin 2]
+                            <img src="images/nghile.jpg" alt="Thông báo lịch nghỉ lễ" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2 text-gray-800">Thông báo Lịch hoạt động CLB dịp Lễ</h3>
@@ -210,7 +210,7 @@
                     </div>
                     <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
                          <div class="placeholder-img">
-                            [Ảnh đại diện tin 3]
+                            <img src="images/votcaulong.jpg" alt="Mẹo chọn vợt cầu lông" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2 text-gray-800">Mẹo chọn vợt cầu lông cho người mới</h3>
