--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -80,13 +80,13 @@
                 <div class="main-content lg:col-span-2 space-y-8">
 
                     <article class="blog-post-summary bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row transition duration-300 hover:shadow-lg">
-                        <a href="/tin-tuc/ket-qua-giai-giao-huu-thang-3-2025.html" class="block md:w-1/3 flex-shrink-0">
+                        <a href="gian-co.html" class="block md:w-1/3 flex-shrink-0">
                             <img src="images/news-thumb-1.jpg" alt="Kết quả giải cầu lông tháng 3" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </a>
                         <div class="post-content p-5 md:p-6 flex flex-col justify-between">
                             <div>
                                 <h2 class="text-xl md:text-2xl font-semibold text-gray-900 mb-2 hover:text-blue-600 transition duration-200">
-                                    <a href="/tin-tuc/ket-qua-giai-giao-huu-thang-3-2025.html">[Giải đấu] Kết quả Giải Giao hữu CLB Nhơn Phú Tháng 3/2025</a>
+                                    <a href="/gian-co.html">[Hướng dẫn] Tầm Quan Trọng Của Việc Giãn Cơ Sau Khi Chơi Thể Thao</a>
                                 </h2>
                                 <div class="post-meta text-sm text-gray-500 mb-3 flex flex-wrap items-center gap-x-3 gap-y-1">
                                     <span class="inline-flex items-center">
@@ -96,14 +96,14 @@
                                     <span class="hidden md:inline">|</span>
                                     <span class="inline-flex items-center">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon lucide lucide-folder-open"><path d="m6 14 1.45-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.55 6a2 2 0 0 1-1.94 1.5H4a2 2 0 0 1-2-2V5c0-1.1.9-2 2-2h3.9a2 2 0 0 1 1.66.9l.82 1.2a2 2 0 0 0 1.66.9H18a2 2 0 0 1 2 2v2"/></svg>
-                                        Giải đấu
+                                        Hướng dẫn
                                     </span>
                                 </div>
                                 <p class="text-gray-600 leading-relaxed mb-4 text-sm md:text-base">
-                                    Giải đấu cầu lông giao hữu tháng 3 đã diễn ra thành công tốt đẹp với những trận cầu hấp dẫn. Xin chúc mừng các VĐV đạt giải và cảm ơn sự tham gia nhiệt tình của mọi người...
+                                    Mặc dù giãn cơ là một phần thiết yếu trong chu trình tập luyện khoa học, nhiều người vẫn bỏ qua bước quan trọng này sau khi chơi thể thao. Khảo sát cho thấy hơn 60% người tập thường bỏ qua việc giãn cơ, coi đây là bước "dư thừa". Trong khi khởi động được coi là bắt buộc trước khi tập luyện, giãn cơ sau tập mang lại những lợi ích không kém phần quan trọng cho sức khỏe và hiệu suất luyện tập...
                                 </p>
                             </div>
-                            <a href="/tin-tuc/ket-qua-giai-giao-huu-thang-3-2025.html" class="inline-block self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition duration-200 group">
+                            <a href="/gian-co.html" class="inline-block self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition duration-200 group">
                                 Đọc tiếp
                                 <span class="inline-block transition-transform duration-200 group-hover:translate-x-1">&rarr;</span>
                             </a>
@@ -112,7 +112,7 @@
 
                     <article class="blog-post-summary bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row transition duration-300 hover:shadow-lg">
                         <a href="/tin-tuc/thong-bao-lich-hoat-dong-dip-le.html" class="block md:w-1/3 flex-shrink-0">
-                            <img src="images/news-thumb-2.jpg" alt="Thông báo lịch nghỉ lễ" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
+                            <img src="images/nghile.jpg" alt="Thông báo lịch nghỉ lễ" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </a>
                         <div class="post-content p-5 md:p-6 flex flex-col justify-between">
                             <div>
@@ -131,7 +131,7 @@
                                     </span>
                                 </div>
                                 <p class="text-gray-600 leading-relaxed mb-4 text-sm md:text-base">
-                                    CLB Cầu Lông Nhơn Phú xin trân trọng thông báo lịch hoạt động của sân cầu lông Viện Sốt Rét trong dịp Lễ [Tên Lễ] sắp tới để quý thành viên và khách thuê sân tiện sắp xếp...
+                                    CLB Cầu Lông Nhơn Phú xin trân trọng thông báo lịch hoạt động của sân cầu lông Viện Sốt Rét trong dịp Lễ 30-4 sắp tới để quý thành viên và khách thuê sân tiện sắp xếp...
                                 </p>
                             </div>
                             <a href="/tin-tuc/thong-bao-lich-hoat-dong-dip-le.html" class="inline-block self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition duration-200 group">
@@ -143,7 +143,7 @@
 
                     <article class="blog-post-summary bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row transition duration-300 hover:shadow-lg">
                         <a href="/meo-chon-vot-cau-long-cho-nguoi-moi.html" class="block md:w-1/3 flex-shrink-0">
-                            <img src="images/news-thumb-3.jpg" alt="Chọn vợt cầu lông" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
+                            <img src="images/votcaulong.jpg" alt="Chọn vợt cầu lông" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </a>
                         <div class="post-content p-5 md:p-6 flex flex-col justify-between">
                             <div>
