--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -111,13 +111,13 @@
                     </article>
 
                     <article class="blog-post-summary bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row transition duration-300 hover:shadow-lg">
-                        <a href="/tin-tuc/thong-bao-lich-hoat-dong-dip-le.html" class="block md:w-1/3 flex-shrink-0">
+                        <a href="nghile.html" class="block md:w-1/3 flex-shrink-0">
                             <img src="images/nghile.jpg" alt="Thông báo lịch nghỉ lễ" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </a>
                         <div class="post-content p-5 md:p-6 flex flex-col justify-between">
                             <div>
                                 <h2 class="text-xl md:text-2xl font-semibold text-gray-900 mb-2 hover:text-blue-600 transition duration-200">
-                                    <a href="/tin-tuc/thong-bao-lich-hoat-dong-dip-le.html">[Thông báo] Lịch hoạt động CLB Cầu lông Nhơn Phú dịp Lễ sắp tới</a>
+                                    <a href="nghile.html">[Thông báo] Lịch hoạt động CLB Cầu lông Nhơn Phú dịp Lễ sắp tới</a>
                                 </h2>
                                 <div class="post-meta text-sm text-gray-500 mb-3 flex flex-wrap items-center gap-x-3 gap-y-1">
                                     <span class="inline-flex items-center">
