--- a/gian-co.html
+++ b/gian-co.html
@@ -351,7 +351,7 @@
             <p>Khi chúng ta tập luyện, các nhóm cơ hoạt động liên tục và phải đối mặt với áp lực lớn. Trong quá trình này, cơ thể tiết ra axit lactic - sản phẩm phụ của quá trình chuyển hóa năng lượng, khiến cơ bắp cảm thấy đau nhức và mệt mỏi sau buổi tập. Nếu không giãn cơ, lượng axit lactic tích tụ trong các sợi cơ sẽ không được giải phóng đúng cách, gây cản trở cho quá trình phục hồi và thậm chí có thể dẫn đến chấn thương.</p>
 
             <div class="exercise-container">
-                <img src="https://placehold.co/800x400/e4e8f0/333?text=Minh+hoa+gian+co" alt="Minh họa quá trình giãn cơ và phục hồi" class="exercise-image" onerror="this.onerror=null; this.src='https://placehold.co/800x400/e4e8f0/333?text=Image+Error';">
+                <img src="/images/stretches.jpg" alt="Minh họa quá trình giãn cơ và phục hồi" class="exercise-image" onerror="this.onerror=null; this.src='https://placehold.co/800x400/e4e8f0/333?text=Image+Error';">
             </div>
 
             <h3>Quá trình co rút và phục hồi của cơ bắp:</h3>
@@ -438,7 +438,7 @@
             <h2>Các bài tập giãn cơ hiệu quả sau khi chơi thể thao</h2>
 
             <div class="exercise-container">
-                 <img src="https://placehold.co/800x600/e4e8f0/333?text=Cac+bai+tap" alt="Các bài tập giãn cơ sau khi chơi thể thao" class="exercise-image" onerror="this.onerror=null; this.src='https://placehold.co/800x600/e4e8f0/333?text=Image+Error';">
+                 <img src="/images/stretch2.jpg" alt="Các bài tập giãn cơ sau khi chơi thể thao" class="exercise-image" onerror="this.onerror=null; this.src='https://placehold.co/800x600/e4e8f0/333?text=Image+Error';">
             </div>
 
             <div class="exercise-grid">
