--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
                         <div class="placeholder-img">
-                            [Ảnh đại diện tin 1]
+                            <img src="images/stretch2.jpg" alt="Thông báo lịch nghỉ lễ" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </div>
                         <div class="p-6">
-                            <h3 class="text-xl font-semibold mb-2 text-gray-800">Kết quả Giải Giao hữu Tháng 3/2025</h3>
-                            <p class="text-gray-600 mb-4 text-sm">Cập nhật kết quả và những khoảnh khắc đáng nhớ từ giải đấu giao hữu vừa qua...</p>
+                            <h3 class="text-xl font-semibold mb-2 text-gray-800">Tầm Quan Trọng Của Việc Giãn Cơ Sau Khi Chơi Thể Thao</h3>
+                            <p class="text-gray-600 mb-4 text-sm">Mặc dù giãn cơ là một phần thiết yếu trong chu trình tập luyện khoa học...</p>
                             <a href="tin-tuc.html#bai-viet-1" class="text-blue-600 hover:text-blue-800 font-medium inline-flex items-center">Đọc tiếp <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/arrow-right.svg" alt="" class="icon-inline-sm"/></a>
                         </div>
                     </div>
