--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -81,7 +81,7 @@
 
                     <article class="blog-post-summary bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row transition duration-300 hover:shadow-lg">
                         <a href="gian-co.html" class="block md:w-1/3 flex-shrink-0">
-                            <img src="images/news-thumb-1.jpg" alt="Kết quả giải cầu lông tháng 3" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
+                            <img src="images/stretch2.jpg" alt="Giãn cơ" class="w-full h-48 md:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/94a3b8?text=Ảnh+Tin+Tức';">
                         </a>
                         <div class="post-content p-5 md:p-6 flex flex-col justify-between">
                             <div>
