--- a/gian-co.html
+++ b/gian-co.html
@@ -341,6 +341,11 @@
     <div id="header-placeholder"></div>
 
     <div class="container">
+        <div style="background-color: #3a6ea5; color: white; text-align: center; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem;">
+            <h1 style="margin: 0; font-size: 2.5rem;">TẦM QUAN TRỌNG CỦA VIỆC GIÃN CƠ SAU KHI CHƠI THỂ THAO</h1>
+            <p>Bí quyết phục hồi toàn diện và tăng cường hiệu quả tập luyện</p>
+        </div>
+
         <section class="intro-section">
             <h2>Tại sao nhiều người bỏ qua bước giãn cơ?</h2>
             <p>Mặc dù giãn cơ là một phần thiết yếu trong chu trình tập luyện khoa học, nhiều người vẫn bỏ qua bước quan trọng này sau khi chơi thể thao. Khảo sát cho thấy hơn 60% người tập thường bỏ qua việc giãn cơ, coi đây là bước "dư thừa". Trong khi khởi động được coi là bắt buộc trước khi tập luyện, giãn cơ sau tập mang lại những lợi ích không kém phần quan trọng cho sức khỏe và hiệu suất luyện tập.</p>
@@ -583,3 +588,4 @@
 
 </body>
 </html>
+``` 
