--- a/meo-chon-vot-cau-long-cho-nguoi-moi.html
+++ b/meo-chon-vot-cau-long-cho-nguoi-moi.html
@@ -302,6 +302,11 @@
         <p style="text-align:center; padding: 2rem; color: #777;">Đang tải header...</p>
     </div>
 
+    <div style="background-color: #2e7d32; color: white; text-align: center; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem;">
+        <h1 style="margin: 0; font-size: 2.5rem;">HƯỚNG DẪN CHỌN VỢT CẦU LÔNG CHO NGƯỜI MỚI</h1>
+        <p style="text-align: center;">Khởi đầu hoàn hảo cho hành trình khám phá môn thể thao tuyệt vời</p>
+    </div>
+
     <main class="container">
         <p class="intro">
             Việc lựa chọn một cây vợt cầu lông phù hợp là bước đầu tiên và quan trọng trên hành trình khám phá môn thể thao này.
