--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -134,7 +134,7 @@
                                     CLB Cầu Lông Nhơn Phú xin trân trọng thông báo lịch hoạt động của sân cầu lông Viện Sốt Rét trong dịp Lễ 30-4 sắp tới để quý thành viên và khách thuê sân tiện sắp xếp...
                                 </p>
                             </div>
-                            <a href="/tin-tuc/thong-bao-lich-hoat-dong-dip-le.html" class="inline-block self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition duration-200 group">
+                            <a href="nghile.html" class="inline-block self-start text-sm font-medium text-blue-600 hover:text-blue-800 transition duration-200 group">
                                 Đọc tiếp
                                 <span class="inline-block transition-transform duration-200 group-hover:translate-x-1">&rarr;</span>
                             </a>
