--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -319,10 +319,13 @@
 
         // Load header and footer when the page loads
         document.addEventListener('DOMContentLoaded', () => {
-            loadHTML('header-placeholder', 'header.html');
+            loadHTML('header-placeholder', 'header.html').then(() => {
+                if (window.npInitHeaderMenu) window.npInitHeaderMenu();
+            });
             loadHTML('footer-placeholder', 'footer.html');
         });
     </script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
