--- a/thu-vien.html
+++ b/thu-vien.html
@@ -214,7 +214,9 @@
 
         // Load header and footer when the page loads
         document.addEventListener('DOMContentLoaded', () => {
-            loadHTML('header-placeholder', 'header.html');
+            loadHTML('header-placeholder', 'header.html').then(() => {
+                if (window.npInitHeaderMenu) window.npInitHeaderMenu();
+            });
             loadHTML('footer-placeholder', 'footer.html');
 
             // Initialize the first tab as active (optional, can be done via HTML class)
@@ -230,6 +232,7 @@
           'imageFadeDuration': 300
         });
     </script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
