--- a/tuyen-sinh.html
+++ b/tuyen-sinh.html
@@ -234,6 +234,7 @@
                 }
                 const html = await response.text();
                 element.innerHTML = html;
+                if (filePath === 'header.html' && window.npInitHeaderMenu) window.npInitHeaderMenu();
                 console.log(`Successfully loaded ${filePath} into #${elementId}`);
 
                 // Find and execute the script *within the loaded content*
@@ -265,6 +266,7 @@
             loadHTML('footer-placeholder', 'footer.html');
         });
     </script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
