--- a/index.html
+++ b/index.html
@@ -378,15 +378,17 @@
         <section class="py-16 md:py-24 bg-blue-50">
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 text-blue-800">Kiểm tra sân trống hôm nay</h2>
-                <div class="bg-white p-8 rounded-lg shadow-md max-w-3xl mx-auto mb-6">
-                    <p class="text-gray-600 text-lg inline-flex items-center">
+                <div class="bg-white p-6 md:p-8 rounded-lg shadow-md max-w-3xl mx-auto mb-6">
+                    <p class="text-gray-600 text-lg mb-4 inline-flex items-center">
                         <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/calendar-search.svg" alt="Lịch sân" class="icon-inline text-blue-600"/>
-                        Widget hiển thị lịch sân trống sẽ được tích hợp tại đây.
-                        Bạn có thể xem nhanh các khung giờ còn trống gần nhất.
+                        Xem nhanh tình trạng các sân tại CLB Nhơn Phú trong ngày hôm nay.
                     </p>
-                     <div class="mt-6 p-6 border border-dashed border-gray-300 rounded-md text-gray-500">
-                         [Widget Lịch Đặt Sân Mini]
+                     <!-- START: Mini Booking Widget Placeholder -->
+                     <div id="mini-booking-widget" class="mt-4 p-4 border border-dashed border-gray-300 rounded-md text-gray-500 min-h-[100px] flex items-center justify-center">
+                         <!-- Nội dung widget sẽ được tải vào đây -->
+                         <p>Đang tải lịch sân...</p>
                      </div>
+                     <!-- END: Mini Booking Widget Placeholder -->
                 </div>
                 <a href="dat-san.html" class="cta-button bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-lg text-lg shadow-md">
                     Xem lịch đầy đủ & Đặt sân
@@ -591,6 +593,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             // loadHTML('header.html', 'header-placeholder'); // <- Đã xóa dòng này
             loadHTML('footer.html', 'footer-placeholder');
+            loadMiniBookingWidget(); // Gọi hàm tải widget mini
         });
 
         // (Optional) Add simple fade-in animations on scroll or load
@@ -759,5 +762,81 @@
              console.log("Header script (integrated) execution finished.");
         });
     </script>
+
+    <!-- START: New script for Mini Booking Widget -->
+    <script>
+        async function loadMiniBookingWidget() {
+            const widgetContainer = document.getElementById('mini-booking-widget');
+            if (!widgetContainer) return;
+
+            const API_BASE_URL = 'https://np-backend-3rgn.onrender.com'; // Use the same API base URL
+            const today = new Date().toISOString().split('T')[0]; // Get today's date in YYYY-MM-DD format
+
+            try {
+                widgetContainer.innerHTML = '<p class="text-gray-500">Đang tải lịch sân...</p>'; // Loading indicator
+
+                const response = await fetch(`${API_BASE_URL}/api/availability?date=${today}`);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const data = await response.json();
+
+                if (data && data.courts && data.courts.length > 0) {
+                    let widgetHTML = `<div class="w-full text-left text-sm">`;
+                    widgetHTML += `<h4 class="font-semibold text-center text-gray-700 mb-3">Tình trạng sân ngày ${new Date(today).toLocaleDateString('vi-VN')}</h4>`;
+                    widgetHTML += `<div class="grid grid-cols-1 sm:grid-cols-${data.courts.length} gap-4">`; // Adjust columns based on court count
+
+                    data.courts.forEach(court => {
+                        widgetHTML += `<div class="border rounded p-3 bg-gray-50">`;
+                        widgetHTML += `<h5 class="font-semibold text-center text-blue-700 mb-2">${court.courtName}</h5>`;
+                        widgetHTML += `<ul class="space-y-1">`;
+
+                        // Define key time ranges to display
+                        const keyRanges = [
+                            { label: "Sáng (5h-7h)", start: 5, end: 7 },
+                            { label: "Chiều (17h-19h)", start: 17, end: 19 },
+                            { label: "Tối (19h-21h)", start: 19, end: 21 }
+                        ];
+
+                        keyRanges.forEach(range => {
+                            const availableSlotsInRange = court.slots.filter(slot => {
+                                const slotStartHour = parseInt(slot.startTime.split(':')[0]);
+                                return slot.status === 'available' && slotStartHour >= range.start && slotStartHour < range.end;
+                            });
+
+                            let statusClass = 'text-red-600'; // Default to unavailable/booked
+                            let statusText = 'Hết chỗ';
+                            if (availableSlotsInRange.length > 0) {
+                                statusClass = 'text-green-600';
+                                statusText = `Còn ${availableSlotsInRange.length} suất`;
+                            }
+
+                            widgetHTML += `<li class="flex justify-between items-center text-xs">
+                                            <span class="text-gray-600">${range.label}:</span>
+                                            <span class="font-medium ${statusClass}">${statusText}</span>
+                                         </li>`;
+                        });
+
+                        widgetHTML += `</ul>`;
+                        widgetHTML += `</div>`; // Close court div
+                    });
+
+                    widgetHTML += `</div>`; // Close grid div
+                    widgetHTML += `</div>`; // Close w-full div
+                    widgetContainer.innerHTML = widgetHTML;
+                    widgetContainer.classList.remove('border-dashed', 'text-gray-500', 'items-center', 'justify-center');
+                    widgetContainer.classList.add('border-solid', 'border-gray-200'); // Make border solid
+                } else {
+                    widgetContainer.innerHTML = '<p class="text-orange-600">Không có dữ liệu sân cho ngày hôm nay.</p>';
+                }
+
+            } catch (error) {
+                console.error('Error loading mini booking widget:', error);
+                widgetContainer.innerHTML = `<p class="text-red-600">Lỗi tải lịch sân. Vui lòng thử lại sau hoặc xem trang <a href="dat-san.html" class="underline">Đặt sân</a>.</p>`;
+            }
+        }
+    </script>
+    <!-- END: New script for Mini Booking Widget -->
+
     </body>
 </html>
